# scribecut

./: .gitignore  README.MD  README.md  index.html  main.js  package-lock.json  package.json  preload.js  requirements.txt  vite.config.js
.github/workflows/: release.yml
backend/: peaks.py  requirements.txt  search.py  server.py  server.spec  transcribe.py
docs/: CNAME  index.html  style.css
docs/clipfindr/: index.html  style.css
electron/: main.js  preload.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BottomPanel.jsx  SearchPanel.jsx  Sidebar.jsx  StatusBar.jsx  Titlebar.jsx  VideoPlayer.jsx
